--- a/EDA_R_FinalProject/EDA_R_FinalProject_Submission.Rmd
+++ b/EDA_R_FinalProject/EDA_R_FinalProject_Submission.Rmd
@@ -408,11 +408,6 @@ I was suprised to see that two of the smaller counties, Ferry and San Juan had d
 Group observations by county, city, zip, etc. for the most recent school year, 2013-2014.  
 ```{r echo=FALSE, group_by_attribute}
 
-names(vaccReported_NLT_10_NGT_2500_2013)
-
-
-#going to do for 2013 (most recent year) top 10 by mean nonmedical exempt for county, then withing that county, district, then city, then withing city the zip code.  Then get count of schools in each that are over 10% total exempt, and 5% MMR exempt.  Maybe save some of this for bivariate.  I'm thinking that in bivariate I can look at schools or zones over the MMR threshold and then determine what proportion of the total exemptions are from medical and which are from nonmedical in those zones.  that could be a final plot, the point being is taht choice is pushing it over.
-
 #group by county
 
 by_county_exempt <- vaccReported_NLT_10_NGT_2500_2013 %>%  group_by(school_county) %>% 
@@ -481,6 +476,7 @@ county_group <- inner_join(by_county_medexempt, by_county_MMR, by = "school_coun
 names(county_group)
 summary(county_group)
 str(county_group)
+glimpse(county_group)
 
 
 #group by county, school_type
@@ -551,53 +547,10 @@ county_group_type <- inner_join(by_county_medexempt_type, by_county_MMR_type, by
 names(county_group_type)
 summary(county_group_type)
 str(county_group_type)
+glimpse(county_group_type)
 
   
 
-
-
-by_city_exempt <- vaccReported_NLT_10_NGT_2500_2013 %>%  group_by(school_city) %>% 
-  summarize(mean_percent_exempt = round(mean(percent_exempt, na.rm=TRUE), 2), 
-            median_percent_exempt = round(median(percent_exempt, na.rm=TRUE), 2), 
-            max_percent_exempt = round(max(percent_exempt, na.rm=TRUE), 2), 
-            min_percent_exempt = round(min(percent_exempt, na.rm=TRUE), 2), 
-            schools=n(), 
-            students=sum(enrolled, na.rm=TRUE)) %>% 
-  na.omit() %>% 
-  arrange(desc(mean_percent_exempt))
-
-by_city_nonmedexempt <- vaccReported_NLT_10_NGT_2500_2013 %>%  group_by(school_city) %>% 
-  summarize(mean_percent_nonmedexempt = round(mean(percent_nonmedexempt, na.rm=TRUE), 2), 
-            median_percent_nonmedexempt = round(median(percent_nonmedexempt, na.rm=TRUE), 2), 
-            max_percent_nonmedexempt = round(max(percent_nonmedexempt, na.rm=TRUE), 2), 
-            min_percent_nonmedexempt = round(min(percent_nonmedexempt, na.rm=TRUE), 2), 
-            schools=n(), 
-            students=sum(enrolled, na.rm=TRUE)) %>% 
-  na.omit() %>% 
-  arrange(desc(mean_percent_nonmedexempt))
-
-
-by_zip_exempt <- vaccReported_NLT_10_NGT_2500_2013 %>%  group_by(school_zip) %>% 
-  summarize(mean_percent_exempt = round(mean(percent_exempt, na.rm=TRUE), 2), 
-            median_percent_exempt = round(median(percent_exempt, na.rm=TRUE), 2), 
-            max_percent_exempt = round(max(percent_exempt, na.rm=TRUE), 2), 
-            min_percent_exempt = round(min(percent_exempt, na.rm=TRUE), 2), 
-            schools=n(), 
-            students=sum(enrolled, na.rm=TRUE)) %>% 
-  na.omit() %>% 
-  arrange(desc(mean_percent_exempt))
-
-by_zip_nonmedexempt <- vaccReported_NLT_10_NGT_2500_2013 %>%  group_by(school_zip) %>% 
-  summarize(mean_percent_nonmedexempt = round(mean(percent_nonmedexempt, na.rm=TRUE), 2), 
-            median_percent_nonmedexempt = round(median(percent_nonmedexempt, na.rm=TRUE), 2), 
-            max_percent_nonmedexempt = round(max(percent_nonmedexempt, na.rm=TRUE), 2), 
-            min_percent_nonmedexempt = round(min(percent_nonmedexempt, na.rm=TRUE), 2), 
-            schools=n(), 
-            students=sum(enrolled, na.rm=TRUE)) %>% 
-  na.omit() %>% 
-  filter(students >=500) %>%
-  arrange(desc(mean_percent_nonmedexempt))
-names(vaccReported) 
 ```
 
 ##Total Exemptions vs. Enrollment##
@@ -1037,15 +990,53 @@ ggplot(data= melt_county_group, aes(y=mean_percent_exemption_type, x=school_coun
   geom_bar(position="stack",stat="identity") + 
   coord_flip()
 
-#split into quantiles
+#add a quartile rank column to melt county group
+
+melt_county_group <- within(melt_county_group, mean_percent_exempt_quartile <- cut(mean_percent_exempt, quantile(mean_percent_exempt, probs=0:4/4), include.lowest=TRUE, labels=FALSE))
+
+#change quartile rank to factor
+as.factor(melt_county_group$mean_percent_exempt_quartile)
+
+#set up labels
+
+melt_county_group$labels <- paste(melt_county_group$schools, " Schools enrolling\n", melt_county_group$students, " Students", sep="")
+
+quantile(melt_county_group$mean_percent_exempt)
+
+#plot each quartile and display in grid
+p1 = ggplot(data= subset(melt_county_group, mean_percent_exempt_quartile == 4), aes(y=mean_percent_exemption_type, x=school_county, fill = exemption_type)) +
+  geom_bar(position="stack",stat="identity") + 
+  coord_flip() #+
+  #annotate("text", x=seq(1, 10, 1), y=20, label=melt_county_group$labels[melt_county_group$mean_percent_exempt_quartile == 4], size=2.1)
+
+  
+p2 = p1 = ggplot(data= subset(melt_county_group, mean_percent_exempt_quartile == 3), aes(y=mean_percent_exemption_type, x=school_county, fill = exemption_type)) +
+  geom_bar(position="stack",stat="identity") + 
+  coord_flip()
+  
+p3 = p1 = ggplot(data= subset(melt_county_group, mean_percent_exempt_quartile == 2), aes(y=mean_percent_exemption_type, x=school_county, fill = exemption_type)) +
+  geom_bar(position="stack",stat="identity") + 
+  coord_flip()
+  
+p4 = p1 = ggplot(data= subset(melt_county_group, mean_percent_exempt_quartile == 1), aes(y=mean_percent_exemption_type, x=school_county, fill = exemption_type)) +
+  geom_bar(position="stack",stat="identity") + 
+  coord_flip()
+
+grid.arrange(p1,p2,p3,p4,ncol=1)
 
 #order by ?
 
-#label
+#make 2 cuts, counties >=10 total, counties between 5 and 10  make a case that MMR exemptions and total exemptions pretty closely related (or actually calculate what the cutoff should be for mean percent exempt base on its relationship to MMR exempt)  then plot etc. etc.
 
 
 
-names(county_group_type)
+ggplot(data= subset(melt_county_group, mean_percent_exempt_quartile == 4), aes(y=mean_percent_exemption_type, x=school_county, fill = exemption_type)) +
+  geom_bar(position="stack",stat="identity") + 
+  coord_flip() +
+  annotate("text", x=seq(1, 10, 1), y=23, label=unique(melt_county_group$labels[melt_county_group$mean_percent_exempt_quartile == 4]), size=4) +
+  theme(legend.position = "top",legend.title=element_blank()) +
+  geom_hline(y = 10, color = "red", size = 2) +
+  geom_hline(y = 5, color = "red", size = 2)
 
 ```
 
@@ -1092,3 +1083,11 @@ I didn't observe any relationships that stand out fromt the bivariate plots sect
 
 
 # References
+* Udacity Forums and Coaches Lounge*
+* [Hadley Wikhams Tidy Data manuscript and associate vignette](https://github.com/hadley/tidy-data)*
+*[Quick R](http://www.statmethods.net/)*
+* R for Dummies*
+*[Cookbook for R](http://www.cookbook-r.com/)*
+* R Cookbook by Paul Teetor (O'Reilly)*
+* [Kieran Healy's Github Repo](https://github.com/kjhealy/vaccines-ca/blob/master/vaccines.r)*
+* Stack Overflow*
